end of section 4

--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -19,6 +19,7 @@
       }
     },
     "https": {
+      "hotReloadEnabled": false,
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
